--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -884,7 +884,7 @@
 
 
         <!-- Contact Section -->
-<section class="pt-4 pb-12 sm:pb-16 lg:pt-8 lg:pb-24 xl:pb-32 bg-green-50">
+<section class="pt-4 pb-12 sm:pb-16 lg:pt-8 lg:pb-24 xl:pb-32 bg-white">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <div class="bg-[#dceaf9] rounded-xl shadow-2xl overflow-hidden">
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 lg:gap-8 xl:gap-12 p-4 sm:p-6 lg:p-8 xl:p-12">
